# pyala

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: tutorial.ipynb
pyala/: pyala.py
resources/: builtin-functions.txt  python-grammar-to-do.txt  python-grammar.txt
scala/: build.sbt
scala/src/main/scala/: BinOp.scala  Main.scala
scala/src/test/scala/: BinOpTest.scala
scripts/: transpile_tests.py
tests/: pyala_test.py
