[tool.poetry]
name = "pyala"
version = "0.1.0"
description = ""
authors = ["Ludovic Trottier <ludovic.trottier.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
